--- a/web/src/main/resources/templates/login.html
+++ b/web/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="layui-carousel video_mask" id="login_carousel" >
-    <div>
+    <div th:attr="carousel-item='carousel-item'">
         <div class="carousel_div1"></div>
         <div class="carousel_div2"></div>
         <div class="carousel_div3"></div>
