--- a/web/src/main/resources/templates/admin/index.html
+++ b/web/src/main/resources/templates/admin/index.html
@@ -5,29 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <title>layout 后台大布局 - Layui</title>
     <link rel="stylesheet" th:href="@{/layui/css/layui.css}" />
-    <link rel="stylesheet" th:href="@{/css/login.css}"/>
-    <link th:href="@{//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
 </head>
-<body>
+<body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
         <div class="layui-logo">Study Admin</div>
-        <div class="layui-layout layui-layout-left" style="line-height: 60px;color: #ffffff;height: 60px;text-align: center;width: 50px;"><i class="fa fa-bars fa-2x"></i></div>
         <!-- 头部区域（可配合layui已有的水平导航） -->
         <!--<ul class="layui-nav layui-layout-left">-->
-        <!--<li class="layui-nav-item"><a href="">控制台</a></li>-->
-        <!--<li class="layui-nav-item"><a href="">商品管理</a></li>-->
-        <!--<li class="layui-nav-item"><a href="">用户</a></li>-->
-        <!--<li class="layui-nav-item">-->
-        <!--<a href="javascript:;">其它系统</a>-->
-        <!--<dl class="layui-nav-child">-->
-        <!--<dd><a href="">邮件管理</a></dd>-->
-        <!--<dd><a href="">消息管理</a></dd>-->
-        <!--<dd><a href="">授权管理</a></dd>-->
-        <!--</dl>-->
-        <!--</li>-->
+            <!--<li class="layui-nav-item"><a href="">控制台</a></li>-->
+            <!--<li class="layui-nav-item"><a href="">商品管理</a></li>-->
+            <!--<li class="layui-nav-item"><a href="">用户</a></li>-->
+            <!--<li class="layui-nav-item">-->
+                <!--<a href="javascript:;">其它系统</a>-->
+                <!--<dl class="layui-nav-child">-->
+                    <!--<dd><a href="">邮件管理</a></dd>-->
+                    <!--<dd><a href="">消息管理</a></dd>-->
+                    <!--<dd><a href="">授权管理</a></dd>-->
+                <!--</dl>-->
+            <!--</li>-->
         <!--</ul>-->
-        <ul class="layui-nav layui-layout-right">
+        <ul class="layui-nav layui-layout-right layui-bg-molv">
             <li class="layui-nav-item">
                 <a href="javascript:;">
                     <img src="http://t.cn/RCzsdCq" class="layui-nav-img" />
@@ -47,9 +44,6 @@
             <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
             <ul class="layui-nav layui-nav-tree"  lay-filter="test">
                 <li class="layui-nav-item layui-nav-itemed">
-                    <a href="javascript:;">用户信息</a>
-                </li>
-                <li class="layui-nav-item">
                     <a class="" href="javascript:;">所有商品</a>
                     <dl class="layui-nav-child">
                         <dd><a href="javascript:;">列表一</a></dd>
@@ -72,16 +66,9 @@
         </div>
     </div>
 
-    <div id="contentDiv" class="layui-body" style="padding: 15px;">
+    <div class="layui-body">
         <!-- 内容主体区域 -->
-            <!--<div class="layui-carousel video_mask" id="login_carousel" >-->
-                <!--<div th:attr="carousel-item='carousel-item'">-->
-                    <!--<div class="carousel_div1"></div>-->
-                    <!--<div class="carousel_div2"></div>-->
-                    <!--<div class="carousel_div3"></div>-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--<iframe id="iframe" width="100%" height="100%"  frameBorder="0" scrolling="yes"></iframe>-->
+        <div style="padding: 15px;" id="content">内容主体区域</div>
     </div>
 
     <div class="layui-footer">
@@ -97,28 +84,11 @@
         var element = layui.element;
 
     });
-
+    
     $(function () {
         $(".layui-nav-item").click(function () {
-            $("#contentDiv").load('/admin/user/list');
+            $("#content").load('/login');
         });
-    });
-
-    layui.use(['carousel'], function () {
-        var $ = layui.jquery,
-            carousel = layui.carousel;
-
-        /**背景图片轮播*/
-        carousel.render({
-            elem: '#login_carousel',
-            width: '100%',
-            height: '100%',
-            interval:3000,
-            arrow: 'none',
-            anim: 'fade',
-            indicator:'none'
-        });
-
     });
 </script>
 </body>
