--- a/web/src/main/resources/templates/admin/index.html
+++ b/web/src/main/resources/templates/admin/index.html
@@ -5,26 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <title>layout 后台大布局 - Layui</title>
     <link rel="stylesheet" th:href="@{/layui/css/layui.css}" />
+    <link rel="stylesheet" th:href="@{/css/common.css}"/>
+    <link th:href="@{//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
 </head>
-<body class="layui-layout-body">
+<body>
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
         <div class="layui-logo">Study Admin</div>
+        <div class="layui-layout layui-layout-left bars" ><i class="fa fa-bars fa-2x"></i></div>
         <!-- 头部区域（可配合layui已有的水平导航） -->
         <!--<ul class="layui-nav layui-layout-left">-->
-            <!--<li class="layui-nav-item"><a href="">控制台</a></li>-->
-            <!--<li class="layui-nav-item"><a href="">商品管理</a></li>-->
-            <!--<li class="layui-nav-item"><a href="">用户</a></li>-->
-            <!--<li class="layui-nav-item">-->
-                <!--<a href="javascript:;">其它系统</a>-->
-                <!--<dl class="layui-nav-child">-->
-                    <!--<dd><a href="">邮件管理</a></dd>-->
-                    <!--<dd><a href="">消息管理</a></dd>-->
-                    <!--<dd><a href="">授权管理</a></dd>-->
-                <!--</dl>-->
-            <!--</li>-->
+        <!--<li class="layui-nav-item"><a href="">控制台</a></li>-->
+        <!--<li class="layui-nav-item"><a href="">商品管理</a></li>-->
+        <!--<li class="layui-nav-item"><a href="">用户</a></li>-->
+        <!--<li class="layui-nav-item">-->
+        <!--<a href="javascript:;">其它系统</a>-->
+        <!--<dl class="layui-nav-child">-->
+        <!--<dd><a href="">邮件管理</a></dd>-->
+        <!--<dd><a href="">消息管理</a></dd>-->
+        <!--<dd><a href="">授权管理</a></dd>-->
+        <!--</dl>-->
+        <!--</li>-->
         <!--</ul>-->
-        <ul class="layui-nav layui-layout-right layui-bg-molv">
+        <ul class="layui-nav layui-layout-right">
             <li class="layui-nav-item">
                 <a href="javascript:;">
                     <img src="http://t.cn/RCzsdCq" class="layui-nav-img" />
@@ -43,7 +46,10 @@
         <div class="layui-side-scroll">
             <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
             <ul class="layui-nav layui-nav-tree"  lay-filter="test">
-                <li class="layui-nav-item layui-nav-itemed">
+                <li class="layui-nav-item layui-nav-itemed" url="/admin/user/list">
+                    <a href="javascript:;">用户信息</a>
+                </li>
+                <li class="layui-nav-item">
                     <a class="" href="javascript:;">所有商品</a>
                     <dl class="layui-nav-child">
                         <dd><a href="javascript:;">列表一</a></dd>
@@ -60,15 +66,14 @@
                         <dd><a href="">超链接</a></dd>
                     </dl>
                 </li>
-                <li class="layui-nav-item"><a href="javascript:;">接口管理</a></li>
+                <li class="layui-nav-item"><a href="/swagger-ui.html" target="_blank">接口管理</a></li>
                 <li class="layui-nav-item"><a href="">发布商品</a></li>
             </ul>
         </div>
     </div>
 
-    <div class="layui-body">
-        <!-- 内容主体区域 -->
-        <div style="padding: 15px;" id="content">内容主体区域</div>
+    <div id="contentDiv" class="layui-body pd15">
+
     </div>
 
     <div class="layui-footer">
@@ -78,18 +83,21 @@
 </div>
 <script th:src="@{/layui/layui.js}" />
 <script th:src="@{/webjars/jquery/2.1.4/jquery.js}" />
-<script>
+<script th:src="@{/js/base.js}" />
+<script type="text/javascript">
     //JavaScript代码区域
     layui.use('element', function(){
         var element = layui.element;
 
     });
-    
+
     $(function () {
         $(".layui-nav-item").click(function () {
-            $("#content").load('/login');
+            var url = $(this).attr('url');
+            $("#contentDiv").load(url);
         });
     });
+
 </script>
 </body>
 </html>
