--- a/web/src/main/resources/templates/admin/user/add.html
+++ b/web/src/main/resources/templates/admin/user/add.html
@@ -1,8 +1,18 @@
-<form id="userForm" class="layui-form" action="">
+<div class="layui-inline">
+    <span class="layui-breadcrumb">
+      <a>用户信息</a>
+      <a><cite>新增用户</cite></a>
+    </span>
+</div>
+<div class="layui-inline fr">
+    <button id="back" class="layui-btn layui-btn-warm "><i class="layui-icon">&#xe65c;</i>  返回</button>
+</div>
+<form id="userForm" class="layui-form layui-anim layui-anim-up" action="">
     <div class="layui-form-item">
         <label class="layui-form-label">用户名</label>
         <div class="layui-input-inline">
-            <input type="text" name="accountName" maxlength="12" lay-verify="required|title" autocomplete="off" placeholder="请输入用户名" class="layui-input" />
+            <input type="text" name="accountName" maxlength="12" lay-verify="required|title" autocomplete="off"
+                   placeholder="请输入用户名" class="layui-input"/>
         </div>
         <div class="layui-form-mid layui-word-aux">请输入6到12位字符</div>
     </div>
@@ -10,7 +20,8 @@
     <div class="layui-form-item">
         <label class="layui-form-label">真实名字</label>
         <div class="layui-input-inline">
-            <input type="text" name="realName" maxlength="12" lay-verify="required|title" autocomplete="off" placeholder="请输入真实名字" class="layui-input" />
+            <input type="text" name="realName" maxlength="12" lay-verify="required|title" autocomplete="off"
+                   placeholder="请输入真实名字" class="layui-input"/>
         </div>
         <div class="layui-form-mid layui-word-aux">请输入6到12位字符</div>
     </div>
@@ -18,7 +29,8 @@
     <div class="layui-form-item">
         <label class="layui-form-label">密码</label>
         <div class="layui-input-inline">
-            <input type="password" name="password" maxlength="12" lay-verify="pass" placeholder="请输入密码" autocomplete="off" class="layui-input" />
+            <input type="password" name="password" maxlength="12" lay-verify="pass" placeholder="请输入密码"
+                   autocomplete="off" class="layui-input"/>
         </div>
         <div class="layui-form-mid layui-word-aux">请填写6到12位密码</div>
     </div>
@@ -26,7 +38,8 @@
     <div class="layui-form-item">
         <label class="layui-form-label">确认密码</label>
         <div class="layui-input-inline">
-            <input type="password" name="rePassword" maxlength="12" lay-verify="pass" placeholder="请输入密码" autocomplete="off" class="layui-input" />
+            <input type="password" name="rePassword" maxlength="12" lay-verify="pass" placeholder="请输入密码"
+                   autocomplete="off" class="layui-input"/>
         </div>
         <div class="layui-form-mid layui-word-aux">请填写6到12位密码</div>
     </div>
@@ -34,8 +47,8 @@
     <div class="layui-form-item">
         <label class="layui-form-label">是否激活</label>
         <div class="layui-input-block">
-            <input type="radio" name="locked" value="0" title="是" checked="" />
-            <input type="radio" name="locked" value="1" title="否" />
+            <input type="radio" name="locked" value="0" title="是" checked=""/>
+            <input type="radio" name="locked" value="1" title="否"/>
         </div>
     </div>
 
@@ -43,7 +56,8 @@
         <div class="layui-inline">
             <label class="layui-form-label">手机号码</label>
             <div class="layui-input-inline">
-                <input type="tel" name="phone" maxlength="11" lay-verify="required|phone" placeholder="请输入手机号码" autocomplete="off" class="layui-input" />
+                <input type="tel" name="phone" maxlength="11" lay-verify="required|phone" placeholder="请输入手机号码"
+                       autocomplete="off" class="layui-input"/>
             </div>
         </div>
     </div>
@@ -51,25 +65,26 @@
         <div class="layui-inline">
             <label class="layui-form-label">邮箱</label>
             <div class="layui-input-inline">
-                <input type="text" name="email" lay-verify="email" placeholder="请输入邮箱" autocomplete="off" class="layui-input" />
+                <input type="text" name="email" lay-verify="email" placeholder="请输入邮箱" autocomplete="off"
+                       class="layui-input"/>
             </div>
         </div>
     </div>
     <div class="layui-form-item" pane="">
         <label class="layui-form-label">单选框</label>
         <div class="layui-input-block">
-            <input type="radio" name="sex" value="0" title="男" checked="" />
-            <input type="radio" name="sex" value="1" title="女" />
+            <input type="radio" name="sex" value="0" title="男" checked=""/>
+            <input type="radio" name="sex" value="1" title="女"/>
         </div>
     </div>
     <div class="layui-form-item">
         <label class="layui-form-label">兴趣爱好</label>
         <div class="layui-input-block">
-            <input type="checkbox" lay-skin="primary" name="like" value="write" title="写作" />
-            <input type="checkbox" lay-skin="primary" name="like" value="read" title="阅读" checked="" />
-            <input type="checkbox" lay-skin="primary" name="like" value="game" title="游戏" />
-            <input type="checkbox" lay-skin="primary" name="like" value="music" title="音乐" />
-            <input type="checkbox" lay-skin="primary" name="like" value="tour" title="旅行" />
+            <input type="checkbox" lay-skin="primary" name="like" value="write" title="写作"/>
+            <input type="checkbox" lay-skin="primary" name="like" value="read" title="阅读" checked=""/>
+            <input type="checkbox" lay-skin="primary" name="like" value="game" title="游戏"/>
+            <input type="checkbox" lay-skin="primary" name="like" value="music" title="音乐"/>
+            <input type="checkbox" lay-skin="primary" name="like" value="tour" title="旅行"/>
         </div>
     </div>
     <div class="layui-form-item layui-form-text">
@@ -87,39 +102,43 @@
     </div>
 </form>
 <script type="text/javascript">
-    $(function () {
-        layui.use(['form', 'layedit', 'laydate'], function(){
-            var form = layui.form
-                ,layer = layui.layer;
+    layui.use(['form', 'element'], function () {
+        var form = layui.form
+            , layer = layui.layer
+            , element = layui.element;
 
-            //自定义验证规则
-            form.verify({
-                title:[/(.+){6,12}$/, '请输入6到12位字符']
-                ,pass: [/(.+){6,12}$/, '密码必须6到12位']
+        //自定义验证规则
+        form.verify({
+            title: [/(.+){6,12}$/, '请输入6到12位字符']
+            , pass: [/(.+){6,12}$/, '密码必须6到12位']
+        });
+
+        //监听指定开关
+        form.on('switch(switchTest)', function (data) {
+            layer.msg('开关checked：' + (this.checked ? 'true' : 'false'), {
+                offset: '6px'
             });
+            layer.tips('温馨提示：请注意开关状态的文字可以随意定义，而不仅仅是ON|OFF', data.othis)
+        });
 
-            //监听指定开关
-            form.on('switch(switchTest)', function(data){
-                layer.msg('开关checked：'+ (this.checked ? 'true' : 'false'), {
-                    offset: '6px'
-                });
-                layer.tips('温馨提示：请注意开关状态的文字可以随意定义，而不仅仅是ON|OFF', data.othis)
+        //监听提交
+        form.on('submit(demo1)', function (data) {
+            Base.formCommit('userForm', '/users', function (data) {
+                Base.loadPage('/admin/user/list');
             });
-
-            //监听提交
-            form.on('submit(demo1)', function(data){
-                Base.formCommit('userForm','/users',function (data) {
-                    Base.loadPage('/admin/user/list');
-                });
 //                layer.alert(JSON.stringify(data.field), {
 //                    title: '最终的提交信息'
 //                })
-                return false;
-            });
-
-            //但是，如果你的HTML是动态生成的，自动渲染就会失效
-            //因此你需要在相应的地方，执行下述方法来手动渲染，跟这类似的还有 element.init();
-            form.render();
+            return false;
         });
+
+        //但是，如果你的HTML是动态生成的，自动渲染就会失效
+        //因此你需要在相应的地方，执行下述方法来手动渲染，跟这类似的还有 element.init();
+        form.render();
+        element.init();
+    });
+
+    $("#back").click(function () {
+        Base.loadPage('/admin/user/list');
     });
 </script>
