--- a/web/src/main/resources/templates/admin/index.html
+++ b/web/src/main/resources/templates/admin/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>layout 后台大布局 - Layui</title>
+    <title>Study</title>
     <link rel="stylesheet" th:href="@{/layui/css/layui.css}" />
     <link rel="stylesheet" th:href="@{/css/common.css}"/>
     <link th:href="@{//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
@@ -73,7 +73,15 @@
     </div>
 
     <div id="contentDiv" class="layui-body pd15">
-
+        <div class="layui-carousel" id="test1" lay-filter="test1">
+            <div carousel-item="">
+                <div class="layui-bg-red"></div>
+                <div class="layui-bg-orange"></div>
+                <div class="layui-bg-green"></div>
+                <div class="layui-bg-cyan"></div>
+                <div class="layui-bg-blue"></div>
+            </div>
+        </div>
     </div>
 
     <div class="layui-footer">
@@ -86,8 +94,17 @@
 <script th:src="@{/js/base.js}" />
 <script type="text/javascript">
     //JavaScript代码区域
-    layui.use('element', function(){
-        var element = layui.element;
+    layui.use(['jquery','carousel','element'], function(){
+        var $ = layui.$
+            ,element = layui.element
+            ,carousel = layui.carousel;
+        //常规轮播
+        carousel.render({
+            elem: '#test1'
+            ,width: '100%' //设置容器宽度
+            ,interval: '2000'
+            ,arrow: 'hover'
+        });
 
     });
 
