--- a/web/src/main/resources/templates/login.html
+++ b/web/src/main/resources/templates/login.html
@@ -36,7 +36,7 @@
 </body>
 </html>
 <script>
-    layui.use(['carousel'], function () {
+    layui.use(['jquery','carousel'], function () {
         var $ = layui.jquery,
             carousel = layui.carousel;
 
