--- a/web/src/main/resources/templates/admin/index.html
+++ b/web/src/main/resources/templates/admin/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <title>Study</title>
     <link rel="stylesheet" th:href="@{/layui/css/layui.css}" />
+    <link rel="stylesheet" th:href="@{/sweetAlert/css/sweetalert.css}" />
     <link rel="stylesheet" th:href="@{/css/common.css}"/>
     <link th:href="@{//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
 </head>
@@ -12,7 +13,7 @@
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
         <div class="layui-logo">Study Admin</div>
-        <div class="layui-layout layui-layout-left bars" ><i class="fa fa-bars fa-2x"></i></div>
+        <div id="foldSwitch" class="layui-layout layui-layout-left bars" ><i class="fa fa-bars fa-2x"></i></div>
         <!-- 头部区域（可配合layui已有的水平导航） -->
         <!--<ul class="layui-nav layui-layout-left">-->
         <!--<li class="layui-nav-item"><a href="">控制台</a></li>-->
@@ -42,7 +43,7 @@
         </ul>
     </div>
 
-    <div class="layui-side layui-bg-black">
+    <div class="layui-side layui-bg-black" id="switchNav">
         <div class="layui-side-scroll">
             <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
             <ul class="layui-nav layui-nav-tree"  lay-filter="test">
@@ -72,7 +73,7 @@
         </div>
     </div>
 
-    <div id="contentDiv" class="layui-body pd15">
+    <div id="switchBody" class="layui-body pd15">
         <div class="layui-carousel" id="test1" lay-filter="test1">
             <div carousel-item="">
                 <div class="layui-bg-red"></div>
@@ -82,13 +83,40 @@
                 <div class="layui-bg-blue"></div>
             </div>
         </div>
+        <table class="layui-table">
+            <colgroup>
+                <col width="150"/>
+                <col width="200"/>
+                <col/>
+            </colgroup>
+            <thead>
+            <tr>
+                <th>昵称</th>
+                <th>加入时间</th>
+                <th>签名</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>贤心</td>
+                <td>2016-11-29</td>
+                <td>人生就像是一场修行</td>
+            </tr>
+            <tr>
+                <td>许闲心</td>
+                <td>2016-11-28</td>
+                <td>于千万人之中遇见你所遇见的人，于千万年之中，时间的无涯的荒野里…</td>
+            </tr>
+            </tbody>
+        </table>
     </div>
 
-    <div class="layui-footer">
+    <div class="layui-footer footer">
         <!-- 底部固定区域 -->
         © layui.com - 底部固定区域
     </div>
 </div>
+<script th:src="@{/sweetAlert/sweetalert.min.js}" />
 <script th:src="@{/layui/layui.js}" />
 <script th:src="@{/webjars/jquery/2.1.4/jquery.js}" />
 <script th:src="@{/js/base.js}" />
@@ -106,12 +134,37 @@
             ,arrow: 'hover'
         });
 
-    });
-
-    $(function () {
+        /* 打开/关闭左侧导航 */
+        $('#foldSwitch').click(function(){
+            var that = $(this);
+            if (!that.hasClass('close')) {
+                that.addClass('close');
+                $('#switchNav').animate({width:'52px'}, 100).addClass('close').hover(function() {
+                    if (that.hasClass('close')) {
+                        $(this).animate({width:'200px'}, 300);
+                        $('#switchNav .fold-mark').removeClass('fold-mark');
+                        $('a[href="'+window.localStorage.getItem("adminNavTag")+'"]').parent('dd').addClass('layui-this').parents('li').addClass('layui-nav-itemed').siblings('li').removeClass('layui-nav-itemed');
+                    }
+                },function() {
+                    if (that.hasClass('close')) {
+                        $(this).animate({width:'52px'}, 300);
+                        $('#switchNav .layui-nav-item').addClass('fold-mark').removeClass('layui-nav-itemed');
+                    }
+                });
+                $('#switchBody,.footer').animate({left:'52px'}, 100);
+                $('#switchNav .layui-nav-item').addClass('fold-mark').removeClass('layui-nav-itemed');
+            } else {
+                $('a[href="'+window.localStorage.getItem("adminNavTag")+'"]').parent('dd').addClass('layui-this').parents('li').addClass('layui-nav-itemed').siblings('li').removeClass('layui-nav-itemed');
+                that.removeClass('close');
+                $('#switchNav').animate({width:'200px'}, 100).removeClass('close');
+                $('#switchBody,.footer').animate({left:'200px'}, 100);
+                $('#switchNav .fold-mark').removeClass('fold-mark');
+                element.init();
+            }
+        });
         $(".layui-nav-item").click(function () {
             var url = $(this).attr('url');
-            $("#contentDiv").load(url);
+            $("#switchBody").load(url);
         });
     });
 
