--- a/web/src/main/resources/templates/admin/user/list.html
+++ b/web/src/main/resources/templates/admin/user/list.html
@@ -1,56 +1,84 @@
 <div>
     <div class="layui-inline">
-        <input placeholder="用户名" class="layui-input" name="id" id="demoReload" autocomplete="off" />
+        <input id="userId" placeholder="用户名" class="layui-input" autocomplete="off"/>
     </div>
     <div class="layui-inline">
-        <button id="search" class="layui-btn">搜索</button>
+        <button id="search" class="layui-btn"><i class="layui-icon">&#xe615;</i>搜索</button>
     </div>
     <div class="layui-inline fr">
-        <button id="addUser" class="layui-btn layui-btn-normal ">新增用户</button>
+        <button id="addUser" class="layui-btn layui-btn-normal "><i class="layui-icon">&#xe654;</i>新增用户</button>
     </div>
 </div>
 
-<table lay-filter="demo" lay-data="{id: 'user',height: 'full-200'}">
-    <thead>
-    <tr>
-        <th lay-data="{checkbox:true}"></th>
-        <th lay-data="{field:'userId'}">ID</th>
-        <th lay-data="{field:'accountName'}">用户名</th>
-        <th lay-data="{templet: '#operation'}">操作</th>
-    </tr>
-    </thead>
-</table>
+<table id="userTable" lay-filter="demo"></table>
 
 <script type="text/html" id="operation">
-    <a href="javascript:;" class="layui-btn layui-btn-sm layui-btn-normal">编辑</a>
-    <a href="javascript:;" class="layui-btn layui-btn-sm layui-btn-danger">删除</a>
+    <a href="javascript:;" class="layui-btn layui-btn-sm layui-btn-normal" lay-event="edit"><i class="layui-icon">&#xe642;</i>编辑</a>
+    <a href="javascript:;" class="layui-btn layui-btn-sm layui-btn-danger" lay-event="del"><i class="layui-icon">&#xe640;</i>删除</a>
+    <a href="javascript:;" class="layui-btn layui-btn-sm layui-bg-cyan" lay-event="detail"><i class="layui-icon">&#xe60b;</i>详情</a>
 </script>
 <script type="text/javascript">
     $(function () {
-        layui.use('table', function(){
-            var table = layui.table;
+        layui.use(['jquery','table'], function () {
+            var $ = layui.$
+                ,table = layui.table;
 
-            //第一个实例
-            table.init('demo',{
-                url: '/users' //数据接口
-                ,page: true //开启分页
+            table.render({
+                elem: '#userTable'
+                , url: '/users'
                 , skin: 'row'
                 , even: true
-                ,where: {userId: 123}
+                , page: true
+                , height : 'full-200'
+//                , where: {userId: 123}
+                , cellMinWidth: 80 //全局定义常规单元格的最小宽度，layui 2.2.1 新增
+                , cols: [[
+                    {type: 'checkbox'}
+//                    , {field: 'userId', title: 'ID', sort: true}
+                    , {field: 'accountName', title: '用户名'}
+                    , {field: 'realName', title: '真实名称', sort: true}
+                    , {field: 'email', title: '邮箱'}
+                    , {toolbar: '#operation', title: '操作', align:'center'}
+                ]]
             });
 
             $("#search").click(function () {
-                table.reload('user',{
+                table.reload('userTable', {
                     where: { //设定异步数据接口的额外参数，任意设
-                        userId: 555
+                        accountName: $("#userId").val()
                     }
                 });
             });
 
+            //监听工具条
+            table.on('tool(demo)', function(obj){
+                var data = obj.data;
+                if(obj.event === 'detail'){
+                    layer.msg('ID：'+ data.userId + ' 的查看操作');
+                } else if(obj.event === 'del'){
+                    Base.deleteSweetAlertConfirm('/users/'+data.userId,{},function (result) {
+                        if(result.successful){
+                            Base.successSweetAlert("操作成功！");
+                            Base.loadPage('/admin/user/list');
+                        }
+                    });
+                } else if(obj.event === 'edit'){
+                    layer.alert('编辑行：'+ JSON.stringify(data))
+                }
+            });
+
         });
-        
+
         $("#addUser").click(function () {
-            $("#contentDiv").load('/admin/user/add');
+            $("#switchBody").load('/admin/user/add');
+        });
+
+        $("#tryMe").click(function () {
+            swal(
+                'The Internet?',
+                'That thing is still around?',
+                'question'
+            );
         });
     });
 </script>
