--- a/web/src/main/resources/templates/login.html
+++ b/web/src/main/resources/templates/login.html
@@ -16,9 +16,9 @@
     </div>
     <div class="login layui-anim layui-anim-up">
         <h1>Study</h1>
-        <form class="layui-form" action="" method="post">
+        <form id="loginForm" class="layui-form" action="">
             <div class="layui-form-item">
-                <input type="text" name="username" lay-verify="required" placeholder="请输入账号" autocomplete="off"  value="" class="layui-input" />
+                <input type="text" name="accountName" lay-verify="required" placeholder="请输入账号" autocomplete="off"  value="" class="layui-input" />
             </div>
             <div class="layui-form-item">
                 <input type="password" name="password" lay-verify="required" placeholder="请输入密码" autocomplete="off" value="" class="layui-input" />
@@ -28,7 +28,7 @@
                 <!--<div class="code"><img src="captcha.do" width="116" height="36" /></div>-->
             </div>
 
-            <button class="layui-btn login_btn" lay-submit="" lay-filter="login">登陆系统</button>
+            <button id="loginCommit" class="layui-btn login_btn" lay-submit="" lay-filter="login">登陆系统</button>
         </form>
     </div>
 
@@ -36,20 +36,59 @@
 </body>
 </html>
 <script>
-    layui.use(['jquery','carousel'], function () {
-        var $ = layui.jquery,
+    layui.use(['jquery','form','carousel'], function () {
+        var $ = layui.$,
+            form = layui.form,
             carousel = layui.carousel;
 
         /**背景图片轮播*/
-        carousel.render({
-            elem: '#login_carousel',
-            width: '100%',
-            height: '100%',
-            interval:3000,
-            arrow: 'none',
-            anim: 'fade',
-            indicator:'none'
+//        carousel.render({
+//            elem: '#login_carousel',
+//            width: '100%',
+//            height: '100%',
+//            interval:3000,
+//            arrow: 'none',
+//            anim: 'fade',
+//            indicator:'none'
+//        });
+
+        //监听提交
+        $("#loginCommit").click(function () {
+//            console.info("1`111111111111");
+//            Base.formCommit('loginForm', '/login', function (data) {
+//                console.info(data);
+////                if(data.successful){
+////                    Base.loadPage('/admin/user/list');
+////                }
+//            });
+
+            var index;
+            var data = $("#loginForm").serialize();
+            $.ajax({
+                type: "POST",
+                url: "/login",
+                data: data,
+                beforeSend: function () {
+                    index = layer.load();
+                },
+                success: function (resultdata) {
+                    layer.close(index);
+                    if (resultdata.successful) {
+                        callback(resultdata);
+                    } else {
+//                        Base.failLayerMsg(resultdata.message);
+                    }
+                },
+                error: function (xhr, textstatus, thrown) {
+
+                }
+            });
+
         });
+//        form.on('submit(login)', function () {
+//
+//            return false;
+//        });
 
     });
 </script>
