--- a/web/src/main/resources/templates/admin/index.html
+++ b/web/src/main/resources/templates/admin/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" th:href="@{/sweetAlert/css/sweetalert.css}" />
     <link rel="stylesheet" th:href="@{/css/common.css}"/>
     <link th:href="@{//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
+    <link rel="stylesheet" th:href="@{/bootstrap/css/bootstrap.css}"/>
+    <link rel="stylesheet" th:href="@{/bootstrap-table/bootstrap-table.min.css}"/>
 </head>
 <body>
 <div class="layui-layout layui-layout-admin">
@@ -120,6 +122,9 @@
 <script th:src="@{/layui/layui.js}" />
 <script th:src="@{/webjars/jquery/2.1.4/jquery.js}" />
 <script th:src="@{/js/base.js}" />
+<script th:src="@{/bootstrap/js/bootstrap.min.js}"/>
+<script th:src="@{/bootstrap-table/bootstrap-table.min.js}"/>
+<script th:src="@{/bootstrap-table/bootstrap-table-locale-all.min.js}"/>
 <script type="text/javascript">
     //JavaScript代码区域
     layui.use(['jquery','carousel','element'], function(){
