--- a/web/src/main/resources/templates/admin/index.html
+++ b/web/src/main/resources/templates/admin/index.html
@@ -8,28 +8,12 @@
     <link rel="stylesheet" th:href="@{/sweetAlert/css/sweetalert.css}" />
     <link rel="stylesheet" th:href="@{/css/common.css}"/>
     <link th:href="@{//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
-    <link rel="stylesheet" th:href="@{/bootstrap/css/bootstrap.css}"/>
-    <link rel="stylesheet" th:href="@{/bootstrap-table/bootstrap-table.min.css}"/>
 </head>
 <body>
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
         <div class="layui-logo">Study Admin</div>
         <div id="foldSwitch" class="layui-layout layui-layout-left bars" ><i class="fa fa-bars fa-2x"></i></div>
-        <!-- 头部区域（可配合layui已有的水平导航） -->
-        <!--<ul class="layui-nav layui-layout-left">-->
-        <!--<li class="layui-nav-item"><a href="">控制台</a></li>-->
-        <!--<li class="layui-nav-item"><a href="">商品管理</a></li>-->
-        <!--<li class="layui-nav-item"><a href="">用户</a></li>-->
-        <!--<li class="layui-nav-item">-->
-        <!--<a href="javascript:;">其它系统</a>-->
-        <!--<dl class="layui-nav-child">-->
-        <!--<dd><a href="">邮件管理</a></dd>-->
-        <!--<dd><a href="">消息管理</a></dd>-->
-        <!--<dd><a href="">授权管理</a></dd>-->
-        <!--</dl>-->
-        <!--</li>-->
-        <!--</ul>-->
         <ul class="layui-nav layui-layout-right">
             <li class="layui-nav-item">
                 <a href="javascript:;">
@@ -51,6 +35,9 @@
             <ul class="layui-nav layui-nav-tree"  lay-filter="test">
                 <li class="layui-nav-item layui-nav-itemed" url="/admin/user/list">
                     <a href="javascript:;">用户信息</a>
+                </li>
+                <li class="layui-nav-item" url="/buyPlan/list">
+                    <a href="javascript:;">计划信息</a>
                 </li>
                 <li class="layui-nav-item">
                     <a class="" href="javascript:;">所有商品</a>
@@ -122,9 +109,7 @@
 <script th:src="@{/layui/layui.js}" />
 <script th:src="@{/webjars/jquery/2.1.4/jquery.js}" />
 <script th:src="@{/js/base.js}" />
-<script th:src="@{/bootstrap/js/bootstrap.min.js}"/>
-<script th:src="@{/bootstrap-table/bootstrap-table.min.js}"/>
-<script th:src="@{/bootstrap-table/bootstrap-table-locale-all.min.js}"/>
+
 <script type="text/javascript">
     //JavaScript代码区域
     layui.use(['jquery','carousel','element'], function(){
