--- a/web/src/main/resources/templates/buyPlan/list.html
+++ b/web/src/main/resources/templates/buyPlan/list.html
@@ -37,6 +37,7 @@
 <link rel="stylesheet" data-th-href="@{/bootstrap-table/bootstrap-table.min.css}"/>
 <link rel="stylesheet" data-th-href="@{/bootstrap-table/sticky-header/bootstrap-table-sticky-header.css}"/>
 <link rel="stylesheet" data-th-href="@{/bootstrap-table/bootstrap3-editable/css/bootstrap-editable.css}"/>
+<link rel="stylesheet" data-th-href="@{/bootstrap-table/fixed-columns/bootstrap-table-fixed-columns.css}"/>
 <script th:src="@{/webjars/jquery/2.1.4/jquery.js}"/>
 <script data-th-src="@{/bootstrap/js/bootstrap.min.js}"/>
 <script data-th-src="@{/bootstrap-table/bootstrap-table.min.js}"/>
@@ -46,6 +47,7 @@
 <script data-th-src="@{/bootstrap-table/editable/bootstrap-table-editable.js}"/>
 <script data-th-src="@{/bootstrap-table/resizable/bootstrap-table-resizable.js}"/>
 <script data-th-src="@{/bootstrap-table/resizable/colResizable-1.6.js}"/>
+<script data-th-src="@{/bootstrap-table/fixed-columns/bootstrap-table-fixed-columns.js}"/>
 <script data-th-src="@{/js/buyPlan/buyPlan.js}"/>
 </body>
 </html>
