--- a/web/src/main/resources/templates/buyPlan/list.html
+++ b/web/src/main/resources/templates/buyPlan/list.html
@@ -29,7 +29,7 @@
     </form>
 </div>
 <div style="width: 80%">
-    <table id="buyPlanTable" data-show-columns="true"></table>
+    <table id="buyPlanTable" data-show-columns="true" ></table>
 </div>
 
 
@@ -38,6 +38,7 @@
 <link rel="stylesheet" data-th-href="@{/bootstrap-table/sticky-header/bootstrap-table-sticky-header.css}"/>
 <link rel="stylesheet" data-th-href="@{/bootstrap-table/bootstrap3-editable/css/bootstrap-editable.css}"/>
 <link rel="stylesheet" data-th-href="@{/bootstrap-table/fixed-columns/bootstrap-table-fixed-columns.css}"/>
+<link rel="stylesheet" data-th-href="@{/bootstrap-table/group-by-v2/bootstrap-table-group-by.css}"/>
 <script th:src="@{/webjars/jquery/2.1.4/jquery.js}"/>
 <script data-th-src="@{/bootstrap/js/bootstrap.min.js}"/>
 <script data-th-src="@{/bootstrap-table/bootstrap-table.min.js}"/>
@@ -45,9 +46,11 @@
 <script data-th-src="@{/bootstrap-table/bootstrap-table-locale-all.min.js}"/>
 <script data-th-src="@{/bootstrap-table/bootstrap3-editable/js/bootstrap-editable.min.js}"/>
 <script data-th-src="@{/bootstrap-table/editable/bootstrap-table-editable.js}"/>
+<!--<script data-th-src="@{/bootstrap-table/resizable/resizableColumns.js}"/>-->
 <script data-th-src="@{/bootstrap-table/resizable/bootstrap-table-resizable.js}"/>
 <script data-th-src="@{/bootstrap-table/resizable/colResizable-1.6.js}"/>
-<script data-th-src="@{/bootstrap-table/fixed-columns/bootstrap-table-fixed-columns.js}"/>
+<script data-th-src="@{/bootstrap-table/group-by-v2/bootstrap-table-group-by.js}"/>
+<!--<script data-th-src="@{/bootstrap-table/fixed-columns/bootstrap-table-fixed-columns.js}"/>-->
 <script data-th-src="@{/js/buyPlan/buyPlan.js}"/>
 </body>
 </html>
