--- a/web/src/main/resources/templates/admin/index.html
+++ b/web/src/main/resources/templates/admin/index.html
@@ -36,7 +36,7 @@
                 <li class="layui-nav-item layui-nav-itemed" url="/admin/user/list">
                     <a href="javascript:;">用户信息</a>
                 </li>
-                <li class="layui-nav-item" url="/buyPlan/list">
+                <li class="layui-nav-item" url="/buyPlan/listd">
                     <a href="javascript:;">计划信息</a>
                 </li>
                 <li class="layui-nav-item">
